--- a/snippets/cart-free-product.liquid
+++ b/snippets/cart-free-product.liquid
@@ -4,7 +4,11 @@
       <p class="mini-cart__recommendations-heading heading heading--small hidden-pocket">{{ section.settings.free_product_title | escape }}</p>
       <p class="mini-cart__recommendations-heading heading heading--xsmall text--subdued hidden-lap-and-up">{{ section.settings.free_product_title | escape }}</p>
     {%- endif -%}
-
+    {%- if cart.total_price >= section.settings.minimum_total -%}
+      {{ assign free = true }}
+    {%- else -%}
+      {{ assign free = false }}
+    {%- endif -%}
     <div class="scroller">
       <div class="scroller__inner">
         <div class="mini-cart__recommendations-list">
